--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 :root {
-  --color-primary: #eb2f64;
-  --color-primary-light: #ff3366;
-  --color-primary-dark: #ba265d;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999; }
+  --c-primary: #eb2f64;
+  --c-primary-light: #ff3366;
+  --c-primary-dark: #ba265d;
+  --c-grey-light-1: #faf9f9;
+  --c-grey-light-2: #f4f2f2;
+  --c-grey-light-3: #f0eeee;
+  --c-grey-light-4: #ccc;
+  --c-grey-dark-1: #333;
+  --c-grey-dark-2: #777;
+  --c-grey-dark-3: #999;
+  --sh-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3); }
 
 * {
   margin: 0;
@@ -28,9 +29,32 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.6rem;
-  color: var(--color-grey-dark-2);
-  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
+  color: var(--c-grey-dark-2);
+  background-image: linear-gradient(to right bottom, var(--c-primary-light), var(--c-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
   /*//* just in case the content doesn't fully fill the screen */
   min-height: 100vh; }
+
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: var(--c-grey-light-2);
+  box-shadow: var(--sh-dark);
+  min-height: 50rem; }
+
+.header {
+  height: 7rem;
+  background-color: #fff;
+  border-bottom: 1px solid var(--c-grey-light-2); }
+
+.content {
+  display: flex; }
+
+.sidebar {
+  background-color: var(--c-grey-dark-1);
+  flex: 0 1 18%; }
+
+.hotel-view {
+  background-color: #fff;
+  flex: 1; }
