--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,16 +1,21 @@
 .container {
   max-width: 120rem;
   margin: 8rem auto;
-  background-color: var(--c-grey-light-2);
+  background-color: var(--c-grey-light-1);
   box-shadow: var(--sh-dark);
 
   min-height: 50rem;
 }
 
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
   border-bottom: 1px solid var(--c-grey-light-2);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content {
