--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 /*//?----------  LOGO  ----------*/
 .logo {
   height: 3.25rem;
-  margin-left: 3rem; }
+  margin-left: 2rem; }
 
 /*//?----------  SEARCH  ----------*/
 .search {
@@ -73,8 +73,7 @@ body {
     background-color: transparent;
     /*//* move button (w/ icon) on top of the input field */
     position: relative;
-    right: 1rem;
-    transition: all 0.1s; }
+    right: 1rem; }
     .search__button:focus {
       outline: none; }
     .search__button:active {
@@ -85,13 +84,46 @@ body {
     fill: var(--c-primary); }
 
 /*//?----------  USER NAVIGATION  ----------*/
-.user-nav__icon {
-  height: 2.25rem;
-  width: 2.25rem; }
-
-.user-nav__user-photo {
-  height: 3.75rem;
-  border-radius: 50%; }
+.user-nav {
+  /*//* have entire element vertically fill the 'header' parent */
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+  /*//* all direct children (__icon-box(es) and __user) */ }
+  .user-nav > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    /*//* needed so background-color will fill the space when hovered */
+    height: 100%;
+    /*//* vertically center the contained elements (__icon(s) and __user-photo/name) */
+    display: flex;
+    align-items: center; }
+    .user-nav > *:hover {
+      background-color: var(--c-grey-light-2); }
+  .user-nav__icon-box {
+    position: relative; }
+  .user-nav__icon {
+    height: 2.25rem;
+    width: 2.25rem;
+    fill: var(--c-grey-dark-2); }
+  .user-nav__notification {
+    font-size: 0.8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: var(--c-primary-light);
+    color: #fff;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
+    /*//* !!!!  FLEXBOX WILL ALSO WORK ON THE TEXT CONTENT WITHIN AN ELEMENT !!!! */
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .user-nav__user-photo {
+    height: 3.75rem;
+    border-radius: 50%;
+    margin-right: 1rem; }
 
 .container {
   max-width: 120rem;
