--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,13 @@ body {
   /*//* just in case the content doesn't fully fill the screen */
   min-height: 100vh; }
 
-/*//?----------  LOGO  ----------*/
+/*//?===============  HEADER SECTION  ================*/
+/*//?----------  MAIN LOGO  ----------*/
 .logo {
   height: 3.25rem;
   margin-left: 2rem; }
 
-/*//?----------  SEARCH  ----------*/
+/*//?----------  SEARCH INPUT FIELD ----------*/
 .search {
   flex: 0 1 40%;
   display: flex;
@@ -83,7 +84,7 @@ body {
     width: 2rem;
     fill: var(--c-primary); }
 
-/*//?----------  USER NAVIGATION  ----------*/
+/*//?----------  USER NAVIGATION / DETAILS ----------*/
 .user-nav {
   /*//* have entire element vertically fill the 'header' parent */
   align-self: stretch;
@@ -125,6 +126,19 @@ body {
     border-radius: 50%;
     margin-right: 1rem; }
 
+/*//?===============  SIDE-BAR NAVIGATION SECTION  ================*/
+/*//?----------  NAVIGATION  ----------*/
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
+
+/*//?----------  LEGAL  ----------*/
+.legal {
+  font-size: 1.2rem;
+  color: var(--c-grey-light-4);
+  text-align: center;
+  padding: 2.5rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -146,8 +160,12 @@ body {
 
 .sidebar {
   background-color: var(--c-grey-dark-1);
-  flex: 0 1 18%; }
+  flex: 0 1 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: #fff;
-  flex: 1; }
+  flex: 1;
+  height: 80rem; }
