--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,11 +24,16 @@
 
 .sidebar {
   background-color: var(--c-grey-dark-1);
-
   flex: 0 1 18%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: #fff;
   flex: 1;
+
+  height: 80rem;
 }
