--- a/css/style.css
+++ b/css/style.css
@@ -128,9 +128,48 @@ body {
 
 /*//?===============  SIDE-BAR NAVIGATION SECTION  ================*/
 /*//?----------  NAVIGATION  ----------*/
-.side-nav__icon {
-  width: 1.75rem;
-  height: 1.75rem; }
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem; }
+  .side-nav__item {
+    position: relative;
+    /*//* when Javascript code applies the class 'active' (depending on which page is currently loaded) apply this same hover styling to the '::before' pseudo-element */
+    /*//* this the ':active' pseudo class (applies when clicked), DIFFERENT than the 'active' class seen above that would be controlled by Javascript in a real app */ }
+    .side-nav__item:not(:last-child) {
+      margin-bottom: 0.5rem; }
+    .side-nav__item::before {
+      /*//* remember, you need to add the 'content' property first */
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 4px;
+      background-color: var(--c-primary);
+      transform: scaleY(0);
+      transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
+    .side-nav__item:hover::before, .side-nav__item.active::before {
+      transform: scaleY(1);
+      width: 100%; }
+    .side-nav__item:active::before {
+      background-color: var(--c-primary-light); }
+  .side-nav__link:link, .side-nav__link:visited {
+    color: var(--c-grey-light-1);
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 1.5rem 3rem;
+    /*//* z-index only works if the 'position' is specified */
+    position: relative;
+    z-index: 10;
+    display: flex;
+    align-items: center; }
+  .side-nav__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    /*//* uses the color of the current or parent element (.side-nav__link).  would also follow any color changes created by a hover */
+    fill: currentColor; }
 
 /*//?----------  LEGAL  ----------*/
 .legal {
