--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -122,15 +122,65 @@
 /*//?===============  SIDE-BAR NAVIGATION SECTION  ================*/
 /*//?----------  NAVIGATION  ----------*/
 .side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
+
   &__item {
+    position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
+
+    &::before {
+      /*//* remember, you need to add the 'content' property first */
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 4px;
+      background-color: var(--c-primary);
+      // transform-origin: bottom;
+      transform: scaleY(0);
+      transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+        background-color 0.1s;
+    }
+
+    /*//* when Javascript code applies the class 'active' (depending on which page is currently loaded) apply this same hover styling to the '::before' pseudo-element */
+    &:hover::before,
+    &.active::before {
+      transform: scaleY(1);
+      width: 100%;
+    }
+
+    /*//* this the ':active' pseudo class (applies when clicked), DIFFERENT than the 'active' class seen above that would be controlled by Javascript in a real app */
+    &:active::before {
+      background-color: var(--c-primary-light);
+    }
   }
 
-  &__link {
+  &__link:link,
+  &__link:visited {
+    color: var(--c-grey-light-1);
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 1.5rem 3rem;
+    /*//* z-index only works if the 'position' is specified */
+    position: relative;
+    z-index: 10;
+
+    display: flex;
+    align-items: center;
   }
 
   &__icon {
     width: 1.75rem;
     height: 1.75rem;
+    margin-right: 2rem;
+    /*//* uses the color of the current or parent element (.side-nav__link).  would also follow any color changes created by a hover */
+    fill: currentColor;
   }
 }
 
