Adds gallery and initial layout of hotel overview section

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,24 @@ body {
   text-align: center;
   padding: 2.5rem; }
 
+/*//?===============  HOTEL OVERVIEW  ================*/
+/*//?----------  GALLERY  ----------*/
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+/*//?----------  OVERVIEW  ----------*/
+.overview {
+  display: flex; }
+  .overview__stars {
+    margin-right: auto; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--c-primary); }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
