--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -191,3 +191,44 @@
   text-align: center;
   padding: 2.5rem;
 }
+
+/*//?===============  HOTEL OVERVIEW  ================*/
+/*//?----------  GALLERY  ----------*/
+.gallery {
+  display: flex;
+
+  &__photo {
+    width: 100%;
+    display: block;
+  }
+}
+/*//?----------  OVERVIEW  ----------*/
+.overview {
+  display: flex;
+
+  &__heading {
+  }
+
+  &__stars {
+    margin-right: auto;
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--c-primary);
+  }
+
+  &__location {
+  }
+
+  &__rating {
+  }
+
+  &__rating-average {
+  }
+
+  &__rating-count {
+  }
+}
