--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,8 @@ html {
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
-  line-height: 1.6rem;
+  /*//* !!!! THE 'line-height' PROPERTY JUST TAKES A NUMBER, DO NOT ADD 'rem' AFTER IT !!!! */
+  line-height: 1.6;
   color: var(--c-grey-dark-2);
   background-image: linear-gradient(to right bottom, var(--c-primary-light), var(--c-primary-dark));
   background-size: cover;
@@ -188,13 +189,75 @@ body {
 
 /*//?----------  OVERVIEW  ----------*/
 .overview {
-  display: flex; }
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--c-grey-light-2); }
+  .overview__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem; }
   .overview__stars {
-    margin-right: auto; }
+    margin-right: auto;
+    /*//* the children elements (__icon-star) did not sit exactly center vertically.  they behaved like text in that they had space under them like text.  changing this parent to 'display: flex' made them flex items thereby removing the space and causing them to be centered ('align-items: center' wasn't needed) */
+    display: flex; }
   .overview__icon-star, .overview__icon-location {
     width: 1.75rem;
     height: 1.75rem;
     fill: var(--c-primary); }
+  .overview__location {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center; }
+  .overview__icon-location {
+    margin-right: 0.5rem; }
+  .overview__rating {
+    background-color: var(--c-primary);
+    color: #fff;
+    margin-left: 3rem;
+    padding: 0 2.25rem;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
+  .overview__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300;
+    /*//* slightly decrease the space between this and the '__rating-count' below it */
+    margin-bottom: -3px; }
+  .overview__rating-count {
+    font-size: 0.8rem;
+    text-transform: uppercase; }
+
+/*//?----------  BUTTON INLINE  ----------*/
+.btn-inline {
+  border: none;
+  color: var(--c-primary);
+  font-size: inherit;
+  /*//* follows the same color as the text, listed above */
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.2s; }
+  .btn-inline:hover {
+    animation: pulsate 1s infinite; }
+  .btn-inline:focus {
+    outline: none; }
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none; }
+  50% {
+    transform: scale(1.03);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25); }
+  100% {
+    transform: scale(1);
+    box-shadow: none; } }
 
 .container {
   max-width: 120rem;
