--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -205,12 +205,21 @@
 /*//?----------  OVERVIEW  ----------*/
 .overview {
   display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--c-grey-light-2);
 
   &__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
   }
 
   &__stars {
     margin-right: auto;
+    /*//* the children elements (__icon-star) did not sit exactly center vertically.  they behaved like text in that they had space under them like text.  changing this parent to 'display: flex' made them flex items thereby removing the space and causing them to be centered ('align-items: center' wasn't needed) */
+    display: flex;
   }
 
   &__icon-star,
@@ -221,14 +230,74 @@
   }
 
   &__location {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+  }
+  &__icon-location {
+    margin-right: 0.5rem;
   }
 
   &__rating {
+    background-color: var(--c-primary);
+    color: #fff;
+    margin-left: 3rem;
+    padding: 0 2.25rem;
+    align-self: stretch;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   &__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300;
+    /*//* slightly decrease the space between this and the '__rating-count' below it */
+    margin-bottom: -3px;
   }
 
   &__rating-count {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+  }
+}
+
+/*//?----------  BUTTON INLINE  ----------*/
+.btn-inline {
+  border: none;
+  color: var(--c-primary);
+  font-size: inherit;
+  /*//* follows the same color as the text, listed above */
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.2s;
+
+  &:hover {
+    // color: var(--c-grey-dark-1);
+    animation: pulsate 1s infinite;
+  }
+
+  &:focus {
+    outline: none;
+  }
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+  50% {
+    transform: scale(1.03);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
+  }
+  100% {
+    transform: scale(1);
+    box-shadow: none;
   }
 }
