Begins the layout of the hotel description section

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,6 +13,9 @@
   --c-grey-dark-3: #999;
 
   --sh-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --sh-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+
+  --line: 1px solid var(--c-grey-light-2);
 }
 
 * {
