--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@
   --c-grey-dark-1: #333;
   --c-grey-dark-2: #777;
   --c-grey-dark-3: #999;
-  --sh-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3); }
+  --sh-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --sh-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  --line: 1px solid var(--c-grey-light-2); }
 
 * {
   margin: 0;
@@ -37,7 +39,7 @@ body {
   /*//* just in case the content doesn't fully fill the screen */
   min-height: 100vh; }
 
-/*//?===============  HEADER SECTION  ================*/
+/*//?===============  HEADER  ================*/
 /*//?----------  MAIN LOGO  ----------*/
 .logo {
   height: 3.25rem;
@@ -127,7 +129,7 @@ body {
     border-radius: 50%;
     margin-right: 1rem; }
 
-/*//?===============  SIDE-BAR NAVIGATION SECTION  ================*/
+/*//?===============  SIDEBAR  ================*/
 /*//?----------  NAVIGATION  ----------*/
 .side-nav {
   font-size: 1.4rem;
@@ -179,19 +181,19 @@ body {
   text-align: center;
   padding: 2.5rem; }
 
-/*//?===============  HOTEL OVERVIEW  ================*/
-/*//?----------  GALLERY  ----------*/
+/*//?===============  HOTEL-VIEW  ================*/
+/*//?----------  HOTEL GALLERY  ----------*/
 .gallery {
   display: flex; }
   .gallery__photo {
     width: 100%;
     display: block; }
 
-/*//?----------  OVERVIEW  ----------*/
+/*//?----------  HOTEL OVERVIEW  ----------*/
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--c-grey-light-2); }
+  border-bottom: var(--line); }
   .overview__heading {
     font-size: 2.25rem;
     font-weight: 300;
@@ -259,6 +261,7 @@ body {
     transform: scale(1);
     box-shadow: none; } }
 
+/*//?----------  HOTEL DESCRIPTION  ----------*/
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -270,7 +273,7 @@ body {
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--c-grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center; }
@@ -287,5 +290,22 @@ body {
 
 .hotel-view {
   background-color: #fff;
-  flex: 1;
-  height: 80rem; }
+  flex: 1; }
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--c-grey-light-1);
+  border-bottom: var(--line); }
+
+.description {
+  font-size: 1.4rem;
+  background-color: #fff;
+  box-shadow: var(--sh-light);
+  padding: 3rem;
+  flex: 0 1 60%;
+  margin-right: 4.5rem; }
+
+.user-reviews {
+  background-color: yellowgreen;
+  flex: 1; }
