--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,4 +1,4 @@
-/*//?===============  HEADER SECTION  ================*/
+/*//?===============  HEADER  ================*/
 /*//?----------  MAIN LOGO  ----------*/
 .logo {
   height: 3.25rem;
@@ -119,7 +119,7 @@
   }
 }
 
-/*//?===============  SIDE-BAR NAVIGATION SECTION  ================*/
+/*//?===============  SIDEBAR  ================*/
 /*//?----------  NAVIGATION  ----------*/
 .side-nav {
   font-size: 1.4rem;
@@ -192,8 +192,8 @@
   padding: 2.5rem;
 }
 
-/*//?===============  HOTEL OVERVIEW  ================*/
-/*//?----------  GALLERY  ----------*/
+/*//?===============  HOTEL-VIEW  ================*/
+/*//?----------  HOTEL GALLERY  ----------*/
 .gallery {
   display: flex;
 
@@ -202,11 +202,11 @@
     display: block;
   }
 }
-/*//?----------  OVERVIEW  ----------*/
+/*//?----------  HOTEL OVERVIEW  ----------*/
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--c-grey-light-2);
+  border-bottom: var(--line);
 
   &__heading {
     font-size: 2.25rem;
@@ -301,3 +301,5 @@
     box-shadow: none;
   }
 }
+
+/*//?----------  HOTEL DESCRIPTION  ----------*/
