--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,8 @@ body {
     text-transform: uppercase; }
 
 /*//?----------  BUTTON INLINE  ----------*/
-.btn-inline {
+/*//* EXTEND */
+.btn-inline, .btn-inline__reviews {
   border: none;
   color: var(--c-primary);
   font-size: inherit;
@@ -245,10 +246,18 @@ body {
   background-color: transparent;
   cursor: pointer;
   transition: all 0.2s; }
-  .btn-inline:hover {
-    animation: pulsate 1s infinite; }
-  .btn-inline:focus {
+  .btn-inline:focus, .btn-inline__reviews:focus {
     outline: none; }
+
+.btn-inline:hover {
+  animation: pulsate 1s infinite; }
+
+.btn-inline__reviews span {
+  margin-left: 3px;
+  transition: all 0.2s; }
+
+.btn-inline__reviews:hover span {
+  margin-left: 8px; }
 
 @keyframes pulsate {
   0% {
@@ -309,6 +318,51 @@ body {
     .recommend__photo:not(:last-of-type) {
       margin-right: -1.5rem; }
 
+/*//?----------  REVIEWS  ----------*/
+.review {
+  background-color: #fff;
+  box-shadow: var(--sh-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden; }
+  .review::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.2rem;
+    left: -0.7rem;
+    font-size: 20rem;
+    font-family: sans-serif;
+    line-height: 1;
+    color: var(--c-grey-light-2);
+    z-index: 1; }
+  .review__text {
+    margin-bottom: 2rem;
+    position: relative;
+    z-index: 5; }
+  .review__user {
+    display: flex;
+    align-items: center; }
+  .review__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1rem; }
+  .review__user-box {
+    margin-right: auto; }
+  .review__user-name {
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: 0.4rem; }
+  .review__user-date {
+    font-size: 1rem;
+    color: var(--c-grey-dark-3); }
+  .review__rating {
+    font-size: 2.2rem;
+    color: var(--c-primary);
+    font-weight: 300; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -340,13 +394,14 @@ body {
   flex: 1; }
 
 .detail {
+  /*//* put 'font-size' here so all child elements will inherit it */
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--c-grey-light-1);
   border-bottom: var(--line); }
 
 .description {
-  font-size: 1.4rem;
   background-color: #fff;
   box-shadow: var(--sh-light);
   padding: 3rem;
@@ -354,5 +409,7 @@ body {
   margin-right: 4.5rem; }
 
 .user-reviews {
-  background-color: yellowgreen;
-  flex: 1; }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
