--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -265,7 +265,8 @@
 }
 
 /*//?----------  BUTTON INLINE  ----------*/
-.btn-inline {
+/*//* EXTEND */
+%btn-inline {
   border: none;
   color: var(--c-primary);
   font-size: inherit;
@@ -276,14 +277,28 @@
   background-color: transparent;
   cursor: pointer;
   transition: all 0.2s;
+  &:focus {
+    outline: none;
+  }
+}
 
+.btn-inline {
+  @extend %btn-inline;
   &:hover {
-    // color: var(--c-grey-dark-1);
     animation: pulsate 1s infinite;
   }
 
-  &:focus {
-    outline: none;
+  &__reviews {
+    @extend %btn-inline;
+    & span {
+      margin-left: 3px;
+      transition: all 0.2s;
+    }
+    &:hover {
+      span {
+        margin-left: 8px;
+      }
+    }
   }
 }
 
@@ -365,5 +380,67 @@
     &:not(:last-of-type) {
       margin-right: -1.5rem;
     }
+  }
+}
+
+/*//?----------  REVIEWS  ----------*/
+.review {
+  background-color: #fff;
+  box-shadow: var(--sh-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.2rem;
+    left: -0.7rem;
+    font-size: 20rem;
+    font-family: sans-serif;
+    line-height: 1;
+    color: var(--c-grey-light-2);
+    z-index: 1;
+  }
+
+  &__text {
+    margin-bottom: 2rem;
+    position: relative;
+    z-index: 5;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-name {
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    font-weight: 600;
+    margin-bottom: 0.4rem;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--c-grey-dark-3);
+  }
+
+  &__rating {
+    font-size: 2.2rem;
+    color: var(--c-primary);
+    font-weight: 300;
   }
 }
