--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -12,6 +12,12 @@
   justify-content: center;
   align-items: center;
 
+  @media only screen and (max-width: $bp-xsmall) {
+    order: 1;
+    flex-basis: 90%;
+    margin: 0 auto;
+  }
+
   &__input {
     /*//* the following props don't all inherit unless specifically told to, but then will look up the parent tree until they find the 'prop:value', could be direct parent all the way up to the html tag. */
     font-family: inherit;
@@ -126,11 +132,24 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
 
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin-bottom: 0;
+      }
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+      flex: 1;
     }
 
     &::before {
@@ -173,6 +192,15 @@
 
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      justify-content: center;
+      padding: 2rem;
+    }
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
+    }
   }
 
   &__icon {
@@ -181,6 +209,13 @@
     margin-right: 2rem;
     /*//* uses the color of the current or parent element (.side-nav__link).  would also follow any color changes created by a hover */
     fill: currentColor;
+
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      margin-bottom: 5px;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 
@@ -190,6 +225,10 @@
   color: var(--c-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 
 /*//?===============  HOTEL-VIEW  ================*/
@@ -208,18 +247,42 @@
   align-items: center;
   border-bottom: var(--line);
 
+  @media only screen and (max-width: $bp-xsmall) {
+    flex-wrap: wrap;
+
+    & > * {
+      flex-basis: 50%;
+    }
+  }
+
   &__heading {
     font-size: 2.25rem;
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
+    @media only screen and (max-width: $bp-xsmall) {
+      font-size: 1.8rem;
+      background-color: var(--c-primary);
+      color: #fff;
+      display: flex;
+      justify-content: center;
+    }
   }
 
   &__stars {
     margin-right: auto;
     /*//* the children elements (__icon-star) did not sit exactly center vertically.  they behaved like text in that they had space under them like text.  changing this parent to 'display: flex' made them flex items thereby removing the space and causing them to be centered ('align-items: center' wasn't needed) */
     display: flex;
+
+    @media only screen and (max-width: $bp-xsmall) {
+      justify-content: center;
+    }
   }
 
   &__icon-star,
@@ -233,6 +296,11 @@
     font-size: 1.2rem;
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-xsmall) {
+      justify-content: center;
+      font-size: 1.5rem;
+    }
   }
   &__icon-location {
     margin-right: 0.5rem;
@@ -249,6 +317,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1.5rem;
+    }
+    @media only screen and (max-width: $bp-xsmall) {
+      margin: 0;
+      padding: 1.25rem;
+      flex-direction: row;
+      justify-content: space-around;
+    }
   }
 
   &__rating-average {
@@ -256,11 +334,25 @@
     font-weight: 300;
     /*//* slightly decrease the space between this and the '__rating-count' below it */
     margin-bottom: -3px;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 2rem;
+    }
+    // @media only screen and (max-width: $bp-xsmall) {
+    //   font-size: 2.25rem;
+    // }
   }
 
   &__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 0.5rem;
+    }
+    @media only screen and (max-width: $bp-xsmall) {
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -368,6 +460,10 @@
     margin-right: auto;
   }
 
+  &__friends {
+    display: flex;
+  }
+
   &__photo {
     /*//* don't want the border forcing the photos to shrink (since border is included in the height and width when using 'border-box').  in this case i want it added to the outside of the image content */
     box-sizing: content-box;
@@ -378,7 +474,7 @@
 
     /*//* have them overlap each other */
     &:not(:last-of-type) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
@@ -391,6 +487,11 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &::before {
     content: "\201C";
@@ -449,6 +550,10 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 2rem;
